Revise statement positions report and underlying types

--- a/src/GenerateReports/Templates/Report.css
+++ b/src/GenerateReports/Templates/Report.css
@@ -10,6 +10,12 @@ th
     width: 10em;
 }
 
+th.spacer
+{
+    background-color: transparent;
+    width: 1em;
+}
+
 tr > .header
 {
     text-align: left;
