--- a/src/GenerateReports/Templates/StatementStops.html
+++ b/src/GenerateReports/Templates/StatementStops.html
@@ -10,7 +10,7 @@
 
   <h1>Statement Stops</h1>
 
-  <h2>Stops</h2>
+  <h2>Stops Active</h2>
 
   <table>
     <tr>
@@ -18,7 +18,25 @@
       <th class="header">Ticker</th>
       <th class="detail">Price</th>
     </tr>
-    @foreach (var stop in @Model.Stops)
+    @foreach (var stop in @Model.StopsActive)
+    {
+    <tr>
+      <td class="header">@stop.IssueId</td>
+      <td class="header">@stop.Ticker</td>
+      <td class="detail">@String.Format("{0:n2}", @stop.Price)</td>
+    </tr>
+    }
+  </table>
+
+  <h2>Stops Closed</h2>
+
+  <table>
+    <tr>
+      <th class="header">IssueId</th>
+      <th class="header">Ticker</th>
+      <th class="detail">Price</th>
+    </tr>
+    @foreach (var stop in @Model.StopsClosed)
     {
     <tr>
       <td class="header">@stop.IssueId</td>
