--- a/src/GenerateReports/Templates/StatementStops.html
+++ b/src/GenerateReports/Templates/StatementStops.html
@@ -18,12 +18,12 @@
       <th class="header">Ticker</th>
       <th class="detail">Price</th>
     </tr>
-    @foreach (var stop in @Model.StopsActive)
+    @foreach (var item in @Model.StopsActive)
     {
     <tr>
-      <td class="header">@stop.IssueId</td>
-      <td class="header">@stop.Ticker</td>
-      <td class="detail">@String.Format("{0:n2}", @stop.Price)</td>
+      <td class="header">@item.IssueId</td>
+      <td class="header">@item.Ticker</td>
+      <td class="detail">@String.Format("{0:n2}", @item.Price)</td>
     </tr>
     }
   </table>
@@ -36,12 +36,12 @@
       <th class="header">Ticker</th>
       <th class="detail">Price</th>
     </tr>
-    @foreach (var stop in @Model.StopsClosed)
+    @foreach (var item in @Model.StopsClosed)
     {
     <tr>
-      <td class="header">@stop.IssueId</td>
-      <td class="header">@stop.Ticker</td>
-      <td class="detail">@String.Format("{0:n2}", @stop.Price)</td>
+      <td class="header">@item.IssueId</td>
+      <td class="header">@item.Ticker</td>
+      <td class="detail">@String.Format("{0:n2}", @item.Price)</td>
     </tr>
     }
   </table>
