Replace transaction listing with statement transactions report

--- a/src/GenerateReports/Templates/StatementTransactions.html
+++ b/src/GenerateReports/Templates/StatementTransactions.html
@@ -2,13 +2,13 @@
 
 <html lang="en-us">
 <head>
-  <title>Transaction Listing</title>
+  <title>Statement Transactions</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="css/Report.css">
 </head>
 <body>
 
-  <h1>Transaction Listing</h1>
+  <h1>Statement Transactions</h1>
 
   <h2>Divids</h2>
 
