--- a/src/GenerateReports/Templates/StatementPositions.html
+++ b/src/GenerateReports/Templates/StatementPositions.html
@@ -18,7 +18,7 @@
       <th class="header">Date</th>
       <th class="header">IssueId</th>
       <th class="header">Ticker</th>
-      <th class="detail">Position</th>
+      <th class="detail">Direction</th>
       <th class="detail">Shares</th>
       <th class="detail">Basis</th>
     </tr>
@@ -29,7 +29,7 @@
       <td class="header">@String.Format("{0:d}", @item.Date)</td>
       <td class="header">@item.IssueId</td>
       <td class="header">@item.Ticker</td>
-      <td class="detail">@item.Position</td>
+      <td class="detail">@item.Direction</td>
       <td class="detail">@String.Format("{0}", @item.Shares)</td>
       <td class="detail">@String.Format("{0:n4}", @item.Basis)</td>
     </tr>
@@ -44,7 +44,7 @@
       <th class="header">Date</th>
       <th class="header">IssueId</th>
       <th class="header">Ticker</th>
-      <th class="detail">Position</th>
+      <th class="detail">Direction</th>
       <th class="detail">Shares</th>
       <th class="detail">Basis</th>
       <th class="detail">Price</th>
@@ -59,7 +59,7 @@
       <td class="header">@String.Format("{0:d}", @item.Date)</td>
       <td class="header">@item.IssueId</td>
       <td class="header">@item.Ticker</td>
-      <td class="detail">@item.Position</td>
+      <td class="detail">@item.Direction</td>
       <td class="detail">@String.Format("{0}", @item.Shares)</td>
       <td class="detail">@String.Format("{0:n4}", @item.Basis)</td>
       <td class="detail">@String.Format("{0:n4}", @item.Price)</td>
