--- a/src/GenerateReports/Templates/StatementTransactions.html
+++ b/src/GenerateReports/Templates/StatementTransactions.html
@@ -18,7 +18,7 @@
       <th class="header">Date</th>
       <th class="header">IssueId</th>
       <th class="header">Ticker</th>
-      <th class="detail">Position</th>
+      <th class="detail">Direction</th>
       <th class="detail">Shares</th>
       <th class="detail">Amount</th>
       <th class="detail">Pay Date</th>
@@ -30,7 +30,7 @@
       <td class="header">@String.Format("{0:d}", @item.Date)</td>
       <td class="header">@item.IssueId</td>
       <td class="header">@item.Ticker</td>
-      <td class="detail">@item.Position</td>
+      <td class="detail">@item.Direction</td>
       <td class="detail">@String.Format("{0}", @item.Shares)</td>
       <td class="detail">@String.Format("{0:n5}", @item.Amount)</td>
       <td class="detail">@String.Format("{0:d}", @item.PayDate)</td>
@@ -46,7 +46,7 @@
       <th class="header">Date</th>
       <th class="header">IssueId</th>
       <th class="header">Ticker</th>
-      <th class="detail">Position</th>
+      <th class="detail">Direction</th>
       <th class="detail">Shares</th>
       <th class="detail">New</th>
       <th class="detail">Old</th>
@@ -58,7 +58,7 @@
       <td class="header">@String.Format("{0:d}", @item.Date)</td>
       <td class="header">@item.IssueId</td>
       <td class="header">@item.Ticker</td>
-      <td class="detail">@item.Position</td>
+      <td class="detail">@item.Direction</td>
       <td class="detail">@String.Format("{0}", @item.Shares)</td>
       <td class="detail">@item.New</td>
       <td class="detail">@item.Old</td>
@@ -74,9 +74,9 @@
       <th class="header">Date</th>
       <th class="header">IssueId</th>
       <th class="header">Ticker</th>
-      <th class="detail">Position</th>
+      <th class="detail">Direction</th>
       <th class="detail">Shares</th>
-      <th class="detail">Activity</th>
+      <th class="detail">Operation</th>
       <th class="detail">Price</th>
     </tr>
     @foreach (var item in @Model.Trades)
@@ -86,9 +86,9 @@
       <td class="header">@String.Format("{0:d}", @item.Date)</td>
       <td class="header">@item.IssueId</td>
       <td class="header">@item.Ticker</td>
-      <td class="detail">@item.Position</td>
+      <td class="detail">@item.Direction</td>
       <td class="detail">@String.Format("{0}", @item.Shares)</td>
-      <td class="detail">@item.Activity</td>
+      <td class="detail">@item.Operation</td>
       <td class="detail">@String.Format("{0:n4}", @item.Price)</td>
     </tr>
     }
