--- a/src/GenerateReports/Templates/StatementPositions.html
+++ b/src/GenerateReports/Templates/StatementPositions.html
@@ -10,7 +10,7 @@
 
   <h1>Statement Positions</h1>
 
-  <h2>Positions Active</h2>
+  <h2>Positions Active Today</h2>
 
   <table>
     <tr>
@@ -22,7 +22,7 @@
       <th class="detail">Shares</th>
       <th class="detail">Basis</th>
     </tr>
-    @foreach (var item in @Model.PositionsActive)
+    @foreach (var item in @Model.PositionsActiveToday)
     {
     <tr>
       <td class="header">@item.Sequence</td>
@@ -36,7 +36,7 @@
     }
   </table>
 
-  <h2>Positions Closed</h2>
+  <h2>Positions Closed Today</h2>
 
   <table>
     <tr>
@@ -52,7 +52,41 @@
       <th class="header">OpeningSequence</th>
       <th class="header">OpeningDate</th>
     </tr>
-    @foreach (var item in @Model.PositionsClosed)
+    @foreach (var item in @Model.PositionsClosedToday)
+    {
+    <tr>
+      <td class="header">@item.Sequence</td>
+      <td class="header">@String.Format("{0:d}", @item.Date)</td>
+      <td class="header">@item.IssueId</td>
+      <td class="header">@item.Ticker</td>
+      <td class="detail">@item.Direction</td>
+      <td class="detail">@String.Format("{0}", @item.Shares)</td>
+      <td class="detail">@String.Format("{0:n4}", @item.Basis)</td>
+      <td class="detail">@String.Format("{0:n4}", @item.Price)</td>
+      <td class="spacer"></td>
+      <td class="header">@item.OpeningSequence</td>
+      <td class="header">@String.Format("{0:d}", @item.OpeningDate)</td>
+    </tr>
+    }
+  </table>
+
+  <h2>Positions Closed Prior</h2>
+
+  <table>
+    <tr>
+      <th class="header">Sequence</th>
+      <th class="header">Date</th>
+      <th class="header">IssueId</th>
+      <th class="header">Ticker</th>
+      <th class="detail">Direction</th>
+      <th class="detail">Shares</th>
+      <th class="detail">Basis</th>
+      <th class="detail">Price</th>
+      <th class="spacer"></th>
+      <th class="header">OpeningSequence</th>
+      <th class="header">OpeningDate</th>
+    </tr>
+    @foreach (var item in @Model.PositionsClosedPrior)
     {
     <tr>
       <td class="header">@item.Sequence</td>
