Include price delta for statement positions

--- a/src/GenerateReports/Templates/StatementPositions.html
+++ b/src/GenerateReports/Templates/StatementPositions.html
@@ -23,6 +23,7 @@
       <th class="detail">Basis</th>
       <th class="spacer"></th>
       <th class="detail">Close</th>
+      <th class="detail">Delta</th>
     </tr>
     @foreach (var item in @Model.PositionsActiveToday)
     {
@@ -36,6 +37,7 @@
       <td class="detail">@String.Format("{0:n4}", @item.Basis)</td>
       <td class="spacer"></td>
       <td class="detail">@String.Format("{0:n4}", @item.Close)</td>
+      <td class="detail">@String.Format("{0:+0.0000;-0.0000;0.0000}", @item.Delta)</td>
     </tr>
     }
   </table>
@@ -53,6 +55,7 @@
       <th class="detail">Basis</th>
       <th class="spacer"></th>
       <th class="detail">Close</th>
+      <th class="detail">Delta</th>
     </tr>
     @foreach (var item in @Model.PositionsClosedToday)
     {
@@ -66,6 +69,7 @@
       <td class="detail">@String.Format("{0:n4}", @item.Basis)</td>
       <td class="spacer"></td>
       <td class="detail">@String.Format("{0:n4}", @item.Close)</td>
+      <td class="detail">@String.Format("{0:+0.0000;-0.0000;0.0000}", @item.Delta)</td>
     </tr>
     }
   </table>
