Rename final price fields for statement positions

--- a/src/GenerateReports/Templates/StatementPositions.html
+++ b/src/GenerateReports/Templates/StatementPositions.html
@@ -21,7 +21,7 @@
       <th class="detail">Direction</th>
       <th class="detail">Shares</th>
       <th class="detail">Basis</th>
-      <th class="detail">Close</th>
+      <th class="detail">Final</th>
       <th class="detail">Upper</th>
       <th class="detail">Lower</th>
       <th class="detail">Delta</th>
@@ -36,7 +36,7 @@
       <td class="detail">@item.Direction</td>
       <td class="detail">@String.Format("{0}", @item.Shares)</td>
       <td class="detail">@String.Format("{0:n4}", @item.Basis)</td>
-      <td class="detail">@String.Format("{0:n4}", @item.Close)</td>
+      <td class="detail">@String.Format("{0:n4}", @item.Final)</td>
       <td class="detail">@String.Format("{0:n4}", @item.Upper)</td>
       <td class="detail">@String.Format("{0:n4}", @item.Lower)</td>
       <td class="detail">@String.Format("{0:+0.0000;-0.0000;0.0000}", @item.Delta)</td>
@@ -55,7 +55,7 @@
       <th class="detail">Direction</th>
       <th class="detail">Shares</th>
       <th class="detail">Basis</th>
-      <th class="detail">Close</th>
+      <th class="detail">Final</th>
       <th class="detail">Upper</th>
       <th class="detail">Lower</th>
       <th class="detail">Delta</th>
@@ -70,7 +70,7 @@
       <td class="detail">@item.Direction</td>
       <td class="detail">@String.Format("{0}", @item.Shares)</td>
       <td class="detail">@String.Format("{0:n4}", @item.Basis)</td>
-      <td class="detail">@String.Format("{0:n4}", @item.Close)</td>
+      <td class="detail">@String.Format("{0:n4}", @item.Final)</td>
       <td class="detail">@String.Format("{0:n4}", @item.Upper)</td>
       <td class="detail">@String.Format("{0:n4}", @item.Lower)</td>
       <td class="detail">@String.Format("{0:+0.0000;-0.0000;0.0000}", @item.Delta)</td>
@@ -89,7 +89,7 @@
       <th class="detail">Direction</th>
       <th class="detail">Shares</th>
       <th class="detail">Basis</th>
-      <th class="detail">Close</th>
+      <th class="detail">Final</th>
     </tr>
     @foreach (var item in @Model.PositionsClosedPrior)
     {
@@ -101,7 +101,7 @@
       <td class="detail">@item.Direction</td>
       <td class="detail">@String.Format("{0}", @item.Shares)</td>
       <td class="detail">@String.Format("{0:n4}", @item.Basis)</td>
-      <td class="detail">@String.Format("{0:n4}", @item.Close)</td>
+      <td class="detail">@String.Format("{0:n4}", @item.Final)</td>
     </tr>
     }
   </table>
