Use different naming for intermediate data

--- a/src/GenerateReports/Templates/IntermediatePositions.html
+++ b/src/GenerateReports/Templates/IntermediatePositions.html
@@ -2,13 +2,13 @@
 
 <html lang="en-us">
 <head>
-  <title>Statement Positions</title>
+  <title>Intermediate Positions</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="css/Report.css">
 </head>
 <body>
 
-  <h1>Statement Positions</h1>
+  <h1>Intermediate Positions</h1>
 
   <h2>Positions Active Today</h2>
 
