--- a/src/GenerateReports/Templates/IntermediateStops.html
+++ b/src/GenerateReports/Templates/IntermediateStops.html
@@ -2,13 +2,13 @@
 
 <html lang="en-us">
 <head>
-  <title>Statement Stops</title>
+  <title>Intermediate Stops</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="css/Report.css">
 </head>
 <body>
 
-  <h1>Statement Stops</h1>
+  <h1>Intermediate Stops</h1>
 
   <h2>Stops Active</h2>
 
