--- a/src/GenerateReports/Templates/IntermediatePositions.html
+++ b/src/GenerateReports/Templates/IntermediatePositions.html
@@ -15,6 +15,7 @@
   <table>
     <tr>
       <th class="header">Sequence</th>
+      <th class="header">AccountId</th>
       <th class="header">Date</th>
       <th class="header">IssueId</th>
       <th class="header">Ticker</th>
@@ -32,6 +33,7 @@
     {
     <tr>
       <td class="header">@item.Sequence</td>
+      <td class="header">@item.AccountId</td>
       <td class="header">@String.Format("{0:d}", @item.Date)</td>
       <td class="header">@item.IssueId</td>
       <td class="header">@item.Ticker</td>
@@ -53,6 +55,7 @@
   <table>
     <tr>
       <th class="header">Sequence</th>
+      <th class="header">AccountId</th>
       <th class="header">Date</th>
       <th class="header">IssueId</th>
       <th class="header">Ticker</th>
@@ -70,6 +73,7 @@
     {
     <tr>
       <td class="header" title="Reference: @item.Reference">@item.Sequence</td>
+      <td class="header">@item.AccountId</td>
       <td class="header">@String.Format("{0:d}", @item.Date)</td>
       <td class="header">@item.IssueId</td>
       <td class="header">@item.Ticker</td>
@@ -91,6 +95,7 @@
   <table>
     <tr>
       <th class="header">Sequence</th>
+      <th class="header">AccountId</th>
       <th class="header">Date</th>
       <th class="header">IssueId</th>
       <th class="header">Ticker</th>
@@ -104,6 +109,7 @@
     {
     <tr>
       <td class="header" title="Reference: @item.Reference">@item.Sequence</td>
+      <td class="header">@item.AccountId</td>
       <td class="header">@String.Format("{0:d}", @item.Date)</td>
       <td class="header">@item.IssueId</td>
       <td class="header">@item.Ticker</td>
